# ravenfall-channelbot

./: .env.example  .gitignore  Pipfile  README.md  braille.py  channels_example.json  main modified.py  main.py  main2.py  models.py  pyproject.toml  run.ps1  script_baseitemvalues.py  script_checkcharstock.py  script_getrootingredientsfromcmds.py  script_grabmarketplace.py  script_itemcreditprice.py  script_list_item_effects.py  script_sellall.py  script_stockall.py  script_test.py  script_ws_test.py  test.py  todo.txt
bot/: braille.py  chat_system.py  cog.py  command_contexts.py  command_enums.py  command_exceptions.py  command_utils.py  commands.py  cooldown.py  doc_parser.py  exceptions.py  message_builders.py  message_templates.py  messageprocessor.py  messagewaiter.py  middleman.py  models.py  multichat_command.py  process_watchdog_client.py  prom_metrics.py  prometheus.py  ravenfall.py  ravenfallchannel.py  ravenfallloc.py  ravenfallmanager.py  ravenfallrestarttask.py  rf_webops_client.py  server.py
data/: base_item_values.json  definitions.yaml  example_translation_strings.yaml  item_values.json  strings1.yaml  test_translation_strings.yaml
data - Copy/: definitions.yaml  strings-abrokecube.yaml  strings1.yaml
database/: db.py  models.py  session.py  utils.py
ravenpy/: __init__.py  enums.py  itemdata.py  itemdefs.py  ravenpy.py
tests/: test_context_properties.py
twitchAPI/: pubsub.py
utils/: alert_monitor.py  backoff.py  backup_file_with_date.py  bytes_to_human_readable.py  chatmsg_cd.py  commands_rf.py  filter_username.py  format_time.py  routines.py  (+7 more)
(+43 files in other folders)
