[project]
name = "ravenfall-channelbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "anyio==4.9.0",
    "async-lru==2.0.5",
    "attrs==25.4.0",
    "certifi==2025.4.26",
    "colorama==0.4.6",
    "docstring-parser>=0.17.0",
    "enum-tools==0.13.0",
    "frozenlist==1.8.0",
    "gotify==0.6.0",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "multidict==6.7.0",
    "numerize>=0.12",
    "propcache==0.4.1",
    "psutil==7.0.0",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "rapidfuzz==3.13.0",
    "ruamel-yaml==0.18.14",
    "ruamel-yaml-clib==0.2.12",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "thefuzz==0.22.1",
    "tinydb==4.8.2",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "websockets==15.0.1",
    "yarl==1.22.0",
]
